--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
 
 	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/js.js"></script>
 
 <!-- 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
 -->
@@ -31,66 +32,84 @@
 			<div class="col"></div>
 			<div class="col"></div>
 		</div><!-- end of row1-->
+		<div class="row">
+				<div class="col"></div>
+			<div class="col">
+				<h1>
+					<a href="" class="typewrite" id="declaration" data-period="2000" data-type='[ "I am Creative.", "I Love Design.", "I Love to Develop.", "Let Us Work Together." ]'>
+						<span class="wrap"></span>
+					</a>
+				</h1>
 
+			</div>
+				<div class="col"></div>
+		</div>
 		<div class="row"><!-- start of row2 -->
 			<div class="col">
 			</div>
 
 			<div class="col-lg-auto">
-				<hr id="extendwidth">
-				<h1 class="d-block offset-lg-5">I'M</h1>
+		<!-- 			<div>
+	<h1>
+  <a href="" class="typewrite" data-period="2000" data-type='[ "I am Creative.", "I Love Design.", "I Love to Develop.", "Let Us Have Some Fun Projects.", "Let Us Work Together." ]'>
+    <span class="wrap"></span>
+  </a>
+</h1>
 
-				<h1 class="d-block offset-lg-5 ">MILLER</h1>
-				<span id="minispace"></span>
+</div> -->
+<hr id="extendwidth">
 
-				<h6 class="d-block"><samp>W E B   <kbd>D</kbd> E V E L <kbd>O</kbd> P <kbd>E R</kbd><samp></h6>
-					<span id="minispace"></span>
-					<h1 class="d-block offset-lg-8">PEREZ</h1>
-					<hr id="extendwidth">
-				</div>
+<h1 class="d-block offset-lg-5 ">MILLER</h1>
+<span id="minispace"></span>
 
-				<div class="col">
-				</div>
-			</div><!-- end of row2 -->
+<h6 class="d-block"><samp>W E B   <kbd>D</kbd> E V E L <kbd>O</kbd> P <kbd>E R</kbd><samp></h6>
+	<span id="minispace"></span>
+	<h1 class="d-block offset-lg-8">PEREZ</h1>
+	<hr id="extendwidth">
+</div>
 
-			<div class="row"><!-- start of row3 -->
+<div class="col">
+</div>
+</div><!-- end of row2 -->
 
-				<div class="col" id="halfspacing"></div>
-			</div><!-- end of row3 -->
+<div class="row"><!-- start of row3 -->
 
-			<div class="row"><!-- start of row4 -->
+	<div class="col" id="halfspacing"></div>
+</div><!-- end of row3 -->
 
-				<div class="col-lg">
-				</div>
+<div class="row"><!-- start of row4 -->
 
-				<div class="col-lg">
-					<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillabout" href="#abo">
-						<a class="nav-link" href="#abo"><kbd>About Me</kbd></a>
-					</button>
-				</div>
+	<div class="col-lg">
+	</div>
 
-				<div class="col-lg">
-					<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillproj" href="#pro">
-						<a class="nav-link" href="#pro"><kbd>Projects</kbd></a>
-					</button>
-				</div>
+	<div class="col-lg">
+		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillabout" href="#abo">
+			<a class="nav-link" href="#abo"><kbd>About Me</kbd></a>
+		</button>
+	</div>
 
-				<div class="col-lg">
-					<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillskill" href="#ski">
-						<a class="nav-link" href="#ski"><kbd>Skills</kbd></a>
-					</button>
-				</div>
+	<div class="col-lg">
+		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillproj" href="#pro">
+			<a class="nav-link" href="#pro"><kbd>Projects</kbd></a>
+		</button>
+	</div>
 
-				<div class="col-lg">
-					<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillcontact" href="#con">
-						<a class="nav-link" href="#con"><kbd>Contact</kbd></a>
-					</button>
-				</div>
+	<div class="col-lg">
+		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillskill" href="#ski">
+			<a class="nav-link" href="#ski"><kbd>Skills</kbd></a>
+		</button>
+	</div>
 
-				<div class="col-lg">
-				</div>
+	<div class="col-lg">
+		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillcontact" href="#con">
+			<a class="nav-link" href="#con"><kbd>Contact</kbd></a>
+		</button>
+	</div>
 
-			</div><!-- end of row4 -->
+	<div class="col-lg">
+	</div>
+
+</div><!-- end of row4 -->
 <!-- 			<div class="row">
 				<div class="col" id="largespace"></div>
 			</div> -->
@@ -112,33 +131,33 @@
 					<div id="pro"></div>
 					<h4 id="pro1">Projects</h4>
 					
-	<div class="card-deck"><!-- start of featured stories style="background-color: #546e7a;"-->
-			<div class="card" style="background-color: #546e7a;color:white">
-				<div class="card-body">
-					<h5 class="card-title"><strong><a href="https://peremiller.github.io/csp1-hospital/index.html">Capstone 1</a></strong></h5><br><br>
-					<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px">
-					<p class="card-text">This is a static website for hospital.</p>
-	
-				</div>
-			</div>
-			<div class="card" >
-				<div class="card-body" >
-					<h5 class="card-title"><strong>Capstone 2</strong></h5>
-					<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px"><br><br><br>
-					<p class="card-text">This is an e-commerce website.</p>
-	
-				</div>
-			</div>
-			<div class="card" style="background-color: #546e7a;color:white">
-				
-				<div class="card-body">
-					<h5 class="card-title"><strong>Capstone 3</strong></h5><br><br>
-					<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px">
-					<p class="card-text">This is a website using Laravel framework</p>
+					<div class="card-deck"><!-- start of featured stories style="background-color: #546e7a;"-->
+						<div class="card" style="background-color: #546e7a;color:white">
+							<div class="card-body">
+								<h5 class="card-title"><strong><a href="https://peremiller.github.io/csp1-hospital/index.html">Capstone 1</a></strong></h5><br><br>
+								<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px">
+								<p class="card-text">This is a static website for hospital.</p>
 
-				</div>
-			</div>
-		</div><!-- end of featured stories -->
+							</div>
+						</div>
+						<div class="card" >
+							<div class="card-body" >
+								<h5 class="card-title"><strong>Capstone 2</strong></h5>
+								<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px"><br><br><br>
+								<p class="card-text">This is an e-commerce website.</p>
+
+							</div>
+						</div>
+						<div class="card" style="background-color: #546e7a;color:white">
+
+							<div class="card-body">
+								<h5 class="card-title"><strong>Capstone 3</strong></h5><br><br>
+								<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px">
+								<p class="card-text">This is a website using Laravel framework</p>
+
+							</div>
+						</div>
+					</div><!-- end of featured stories -->
 
 
 					<div id="ski"></div>
