--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="col"></div>
 			<div class="col">
 				<h1>
-					<a href="" class="typewrite" id="declaration" data-period="2000" data-type='[ "I am Creative.", "I Love Design.", "I Love to Develop.", "Let Us Work Together." ]'>
+					<a href="" class="typewrite" id="declaration" data-period="2000" data-type='[ "Creative.", "Talented.","Driven.","Ethical.","Smartworking.","Genuine.","Resourceful." ]'>
 						<span class="wrap"></span>
 					</a>
 				</h1>
