--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/js.js"></script>
 
-<!-- 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
--->
+ 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
+
 <script type="text/javascript" src="assets/js/popper.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
@@ -27,13 +27,13 @@
 
 	<div class="container-fluid">
 
-		<div class="row" id="spacing"><!-- start of row1 -->
+		<div class="row" id="halfspacing"><!-- start of row1 -->
 			<div class="col"></div>
 			<div class="col"></div>
 			<div class="col"></div>
 		</div><!-- end of row1-->
 		<div class="row">
-				<div class="col"></div>
+				<div class="col typewrite"></div>
 			<div class="col">
 				<h1>
 					<a href="" class="typewrite" id="declaration" data-period="2000" data-type='[ "Creative.", "Talented.","Driven.","Smartworking.","Resourceful.","Passionate."]'>
@@ -49,14 +49,7 @@
 			</div>
 
 			<div class="col-lg-auto">
-		<!-- 			<div>
-	<h1>
-  <a href="" class="typewrite" data-period="2000" data-type='[ "I am Creative.", "I Love Design.", "I Love to Develop.", "Let Us Have Some Fun Projects.", "Let Us Work Together." ]'>
-    <span class="wrap"></span>
-  </a>
-</h1>
 
-</div> -->
 <hr id="extendwidth">
 
 <h1 class="d-block offset-lg-5 ">MILLER</h1>
@@ -83,26 +76,26 @@
 	</div>
 
 	<div class="col-lg">
-		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillabout" href="#abo">
-			<a class="nav-link" href="#abo"><kbd>About Me</kbd></a>
+		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link ghost" id="pillabout" href="#abo">
+			<a class="nav-link" href="#abo"><kbd><h2>About</h2></kbd></a>
 		</button>
 	</div>
 
 	<div class="col-lg">
-		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillproj" href="#pro">
-			<a class="nav-link" href="#pro"><kbd>Projects</kbd></a>
+		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link ghost" id="pillproj" href="#pro">
+			<a class="nav-link" href="#pro"><kbd><h2>Projects</h2></kbd></a>
 		</button>
 	</div>
 
 	<div class="col-lg">
-		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillskill" href="#ski">
-			<a class="nav-link" href="#ski"><kbd>Skills</kbd></a>
+		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link ghost" id="pillskill" href="#ski">
+			<a class="nav-link" href="#ski"><kbd><h2>Skills</h2></kbd></a>
 		</button>
 	</div>
 
 	<div class="col-lg">
-		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link" id="pillcontact" href="#con">
-			<a class="nav-link" href="#con"><kbd>Contact</kbd></a>
+		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link ghost" id="pillcontact" href="#con">
+			<a class="nav-link" href="#con"><kbd><h2>Contact</h2></kbd></a>
 		</button>
 	</div>
 
@@ -126,8 +119,10 @@
 
 			<div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="row">
 				<div class="col-lg-11" id="abo">
-					<h4 id="abo1">About Me</h4>
-					<p>Miller Perez is a full stack web developer and a learning enthusiast with almost a decade of experience in the IT industry. He also aims to be a data scientist, an entrepreneur, a licensed financial advisor, an author, a stock & currency trader, and a startup founder.</p>
+					<h4 id="abo1">Getting to Know Stage</h4>
+					<p>Miller Perez is a full stack web developer and a learning enthusiast with almost a decade of experience in the IT industry.</p>
+					<p>He has engaged well in multiple technological delivery environments such as a startup, an international, and a global company through resourcefulness, good task management, and commendable work ethics.</p>
+					<p>He also aims to be a data scientist, entrepreneur, and a stock & currency trader.</p>
 					<div id="pro"></div>
 					<h4 id="pro1">Projects</h4>
 					
