--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
 
 	<div class="col-lg">
 		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link ghost" id="pillabout" href="#abo">
-			<a class="nav-link" href="#abo"><kbd><h2>About</h2></kbd></a>
+			<a class="nav-link" href="#abo"><kbd><h2>kNow me</h2></kbd></a>
 		</button>
 	</div>
 
 	<div class="col-lg">
 		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link ghost" id="pillproj" href="#pro">
-			<a class="nav-link" href="#pro"><kbd><h2>Projects</h2></kbd></a>
+			<a class="nav-link" href="#pro"><kbd><h2>projEcts</h2></kbd></a>
 		</button>
 	</div>
 
 	<div class="col-lg">
 		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link ghost" id="pillskill" href="#ski">
-			<a class="nav-link" href="#ski"><kbd><h2>Skills</h2></kbd></a>
+			<a class="nav-link" href="#ski"><kbd><h2>proWess</h2></kbd></a>
 		</button>
 	</div>
 
 	<div class="col-lg">
 		<button type="button" class="btn btn-light offset-lg-1 sticky-top nav-link ghost" id="pillcontact" href="#con">
-			<a class="nav-link" href="#con"><kbd><h2>Contact</h2></kbd></a>
+			<a class="nav-link" href="#con"><kbd><h2>Speak</h2></kbd></a>
 		</button>
 	</div>
 
