--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -119,12 +119,12 @@
 
 			<div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="row">
 				<div class="col-lg-11" id="abo">
-					<h4 id="abo1">Getting to Know Stage</h4>
+					<h4 id="abo1">k<kbd>N</kbd>ow me</h4>
 					<p>Miller Perez is a full stack web developer and a learning enthusiast with almost a decade of experience in the IT industry.</p>
 					<p>He has engaged well in multiple technological delivery environments such as a startup, an international, and a global company through resourcefulness, good task management, and commendable work ethics.</p>
 					<p>He also aims to be a data scientist, entrepreneur, and a stock & currency trader.</p>
 					<div id="pro"></div>
-					<h4 id="pro1">Projects</h4>
+					<h4 id="pro1">proj<kbd>E</kbd>cts</h4>
 					
 					<div class="card-deck"><!-- start of featured stories style="background-color: #546e7a;"-->
 						<div class="card" style="background-color: #546e7a;color:white">
@@ -156,7 +156,7 @@
 
 
 					<div id="ski"></div>
-					<h4 id="ski1">Skills</h4>
+					<h4 id="ski1">pro<kbd>W</kbd>ess</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -182,7 +182,7 @@
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					<div id="con"></div>
-					<h4 id="con1">Contact</h4>
+					<h4 id="con1"><kbd>S</kbd>peak</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
