--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
 <hr id="extendwidth">
 
-<h1 class="d-block offset-lg-5 ">MILLER</h1>
+<h1 class="d-block offset-lg-5 " style="color: black">MILLER</h1>
 <span id="minispace"></span>
 
-<h6 class="d-block"><samp>W E B   <kbd>D</kbd> E V E L <kbd>O</kbd> P <kbd>E R</kbd><samp></h6>
+<h6 class="d-block" ><samp style="color: black">W E B   <kbd>D</kbd> E V E L <kbd>O</kbd> P <kbd>E R</kbd><samp></h6>
 	<span id="minispace"></span>
-	<h1 class="d-block offset-lg-8">PEREZ</h1>
+	<h1 class="d-block offset-lg-8" style="color: black">PEREZ</h1>
 	<hr id="extendwidth">
 </div>
 
@@ -118,37 +118,37 @@
 			</div><!-- end of row5.2 -->
 
 			<div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="row">
-				<div class="col-lg-11" id="abo">
-					<h4 id="abo1">k<kbd>N</kbd>ow me</h4>
-					<p>Miller Perez is a full stack web developer and a learning enthusiast with almost a decade of experience in the IT industry.</p>
-					<p>He has engaged well in multiple technological delivery environments such as a startup, an international, and a global company through resourcefulness, good task management, and commendable work ethics.</p>
-					<p>He also aims to be a data scientist, entrepreneur, and a stock & currency trader.</p>
+				<div class="col-lg-11" id="abo" style="color: black">
+					<h4 id="abo1" style="color: black">k<kbd>N</kbd>ow me</h4>
+					<p style="color: black">Miller Perez is a full stack web developer and a learning <br> enthusiast with almost a decade of experience in the IT industry.</p>
+					<p style="color: black">He has engaged well in multiple technological delivery environments <br>such as a startup, an international, and a global company through <br>resourcefulness, good task management, and commendable work ethics.</p>
+					<p style="color: black">He also aims to be a data scientist, entrepreneur, and a <br>stock & currency trader.</p>
 					<div id="pro"></div>
 					<h4 id="pro1">proj<kbd>E</kbd>cts</h4>
 					
 					<div class="card-deck"><!-- start of featured stories style="background-color: #546e7a;"-->
 						<div class="card" style="background-color: #546e7a;color:white">
 							<div class="card-body">
-								<h5 class="card-title"><strong><a href="https://peremiller.github.io/csp1-hospital/index.html">Capstone 1</a></strong></h5><br><br>
+								<h5 class="card-title"><strong style="color: black"><a href="https://peremiller.github.io/csp1-hospital/index.html">Capstone 1</a></strong></h5><br><br>
 								<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px">
-								<p class="card-text">This is a static website for hospital.</p>
+								<p class="card-text" style="color: black">This is a static website for hospital.</p>
 
 							</div>
 						</div>
 						<div class="card" >
-							<div class="card-body" >
-								<h5 class="card-title"><strong>Capstone 2</strong></h5>
+							<div class="card-body">
+								<h5 class="card-title" style="color: black"><strong style="color: black">Capstone 2</strong></h5>
 								<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px"><br><br><br>
-								<p class="card-text">This is an e-commerce website.</p>
+								<p class="card-text" style="color: black">This is a website using Laravel framework.</p>
 
 							</div>
 						</div>
 						<div class="card" style="background-color: #546e7a;color:white">
 
 							<div class="card-body">
-								<h5 class="card-title"><strong>Capstone 3</strong></h5><br><br>
+								<h5 class="card-title"><strong style="color: black">Capstone 3</strong></h5><br><br>
 								<img class="card-img-top" src="assets/images/preview.jpg" alt="Card image cap" height="200px" width="350px">
-								<p class="card-text">This is a website using Laravel framework</p>
+								<p class="card-text" style="color: black">This is a website using MELN (MongoDB, Express.js, Laravel, and Node.js)</p>
 
 							</div>
 						</div>
@@ -156,52 +156,52 @@
 
 
 					<div id="ski"></div>
-					<h4 id="ski1">pro<kbd>W</kbd>ess</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<h4 id="ski1" style="color: black">pro<kbd>W</kbd>ess</h4>
+					<p style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					<div id="con"></div>
-					<h4 id="con1"><kbd>S</kbd>peak</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<h4 id="con1" style="color: black"><kbd>S</kbd>peak</h4>
+					<p style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
